# AutogenAgenticAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
01Basics/: 001basicOllama.py  00basics.py  01basics.py  02basics.py  03basics-roundrobin.py  04basicsHumanInLoop.py  05basicSavingState.py  06selectorGroup.py  07web_surfer.py  08mcpWorkbench.py  example.txt  memory.json
